Completing exercise # 2 about for loops

--- a/for_loop.ipynb
+++ b/for_loop.ipynb
@@ -60,12 +60,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "2fy4uBCimzSu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2fy4uBCimzSu",
+        "outputId": "f51525f4-eda8-4ec4-fb80-c66ba6b96fe0"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "16\n",
+            "36\n",
+            "64\n",
+            "100\n"
+          ]
+        }
+      ],
+      "source": [
+        "number_list = [2,4,6,8,10]\n",
+        "\n",
+        "for number in number_list:\n",
+        "  print(number**2)"
+      ]
     },
     {
       "cell_type": "markdown",
