Completing exercise # 3 about for loops

--- a/for_loop.ipynb
+++ b/for_loop.ipynb
@@ -99,12 +99,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "Ya8Kdz1BmzSy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ya8Kdz1BmzSy",
+        "outputId": "2ff5c8a1-12da-4aa8-80cc-c614bad7098b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dog\n",
+            "apple\n",
+            "dog\n",
+            "Erick\n",
+            "apple\n",
+            "apple\n",
+            "apple\n",
+            "Erick\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "\n",
+        "a_dict = {'color': 'blue', 'fruit': 'apple', 'pet': 'dog', \"user\": \"Erick\"}\n",
+        "dict_list = [a_dict]*8\n",
+        "\n",
+        "for dictionary in dict_list:\n",
+        "  keys = list(dictionary.keys())\n",
+        "  length_of_keys = len(keys)\n",
+        "  random_index = random.randint(0, length_of_keys - 1)\n",
+        "\n",
+        "  random_key = keys[random_index]\n",
+        "  print(dictionary[random_key])\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,11 +168,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "Ikz54zlEmzS4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ikz54zlEmzS4",
+        "outputId": "91fe373d-72b4-42bc-9698-795385174867"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 2, 2, 2, 2]\n"
+          ]
+        }
+      ],
       "source": []
     }
   ],
