Completing exercise # 4 about for loops

--- a/for_loop.ipynb
+++ b/for_loop.ipynb
@@ -150,12 +150,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "Gpkwib3rmzS0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gpkwib3rmzS0",
+        "outputId": "9dd6348b-a28b-462e-e706-4e2f6ca958f5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "97\n",
+            "99\n",
+            "95\n",
+            "98\n",
+            "87\n",
+            "95\n",
+            "98\n",
+            "89\n",
+            "68\n",
+            "92\n"
+          ]
+        }
+      ],
+      "source": [
+        "list_of_number_list = [[34, 56, 10, 97, 52, 83, 65, 9, 43, 17],\n",
+        " [99, 76, 63, 89, 6, 53, 20, 85, 80, 8],\n",
+        " [95, 13, 64, 33, 78, 30, 88, 94, 56, 59],\n",
+        " [76, 81, 98, 27, 89, 95, 72, 40, 44, 79],\n",
+        " [6, 68, 58, 37, 38, 87, 9, 74, 83, 56],\n",
+        " [57, 13, 45, 41, 14, 95, 35, 76, 45, 46],\n",
+        " [62, 55, 98, 93, 84, 3, 15, 70, 34, 98],\n",
+        " [85, 29, 52, 89, 48, 3, 63, 75, 80, 66],\n",
+        " [53, 25, 34, 58, 56, 41, 61, 27, 51, 68],\n",
+        " [68, 72, 92, 7, 75, 89, 63, 1, 11, 80]]\n",
+        "\n",
+        "\n",
+        "for number_list in list_of_number_list:\n",
+        "  print(max(number_list))"
+      ]
     },
     {
       "cell_type": "markdown",
