Completing exercise # 5 about for loops

--- a/for_loop.ipynb
+++ b/for_loop.ipynb
@@ -191,24 +191,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ikz54zlEmzS4",
-        "outputId": "91fe373d-72b4-42bc-9698-795385174867"
+        "outputId": "e6cf238e-7beb-4659-f036-b30c3f3d59da"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[2, 2, 2, 2, 2]\n"
+            "Sum of [34, 56, 10, 97, 52, 83, 65, 9, 43, 17] is 466\n",
+            "Sum of [99, 76, 63, 89, 6, 53, 20, 85, 80, 8] is 579\n",
+            "Sum of [95, 13, 64, 33, 78, 30, 88, 94, 56, 59] is 610\n",
+            "Sum of [76, 81, 98, 27, 89, 95, 72, 40, 44, 79] is 701\n",
+            "Sum of [6, 68, 58, 37, 38, 87, 9, 74, 83, 56] is 516\n",
+            "Sum of [57, 13, 45, 41, 14, 95, 35, 76, 45, 46] is 467\n",
+            "Sum of [62, 55, 98, 93, 84, 3, 15, 70, 34, 98] is 612\n",
+            "Sum of [85, 29, 52, 89, 48, 3, 63, 75, 80, 66] is 590\n",
+            "Sum of [53, 25, 34, 58, 56, 41, 61, 27, 51, 68] is 474\n",
+            "Sum of [68, 72, 92, 7, 75, 89, 63, 1, 11, 80] is 558\n"
           ]
         }
       ],
-      "source": []
+      "source": [
+        "list_of_number_list = [[34, 56, 10, 97, 52, 83, 65, 9, 43, 17],\n",
+        " [99, 76, 63, 89, 6, 53, 20, 85, 80, 8],\n",
+        " [95, 13, 64, 33, 78, 30, 88, 94, 56, 59],\n",
+        " [76, 81, 98, 27, 89, 95, 72, 40, 44, 79],\n",
+        " [6, 68, 58, 37, 38, 87, 9, 74, 83, 56],\n",
+        " [57, 13, 45, 41, 14, 95, 35, 76, 45, 46],\n",
+        " [62, 55, 98, 93, 84, 3, 15, 70, 34, 98],\n",
+        " [85, 29, 52, 89, 48, 3, 63, 75, 80, 66],\n",
+        " [53, 25, 34, 58, 56, 41, 61, 27, 51, 68],\n",
+        " [68, 72, 92, 7, 75, 89, 63, 1, 11, 80]]\n",
+        "\n",
+        "\n",
+        "for number_list in list_of_number_list:\n",
+        "  print(f\"Sum of {number_list} is {sum(number_list)}\")"
+      ]
     }
   ],
   "metadata": {
