Completing intermediate exercise # 2

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -127,12 +127,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 37,
       "metadata": {
-        "id": "wa2FLtHkjOXL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wa2FLtHkjOXL",
+        "outputId": "c2889f3f-eb54-4f9c-af90-31e5d47247c4"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Largest Prime factors of 600851475143 is: 6857\n"
+          ]
+        }
+      ],
+      "source": [
+        "def get_prime_factors(n):\n",
+        "    factors = []\n",
+        "    i = 2\n",
+        "    while i * i <= n:\n",
+        "        if n % i:\n",
+        "            i += 1\n",
+        "        else:\n",
+        "            n //= i\n",
+        "            factors.append(i)\n",
+        "    if n > 1:\n",
+        "        factors.append(n)\n",
+        "    return factors\n",
+        "\n",
+        "number = 600851475143\n",
+        "prime_factors = get_prime_factors(number)\n",
+        "print(\"The Largest Prime factors of\", number, \"is:\", max(prime_factors))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -147,12 +176,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "\n",
+        "\n",
+        "def is_palindrome_number(number):\n",
+        "  string_number = str(number)\n",
+        "  reversed_number =  string_number[::-1]\n",
+        "\n",
+        "  if(string_number == reversed_number):\n",
+        "    return True\n",
+        "  else: \n",
+        "    return False"
+      ],
       "metadata": {
-        "id": "ou1gLDYmjOXO"
+        "id": "Xuky219yoe3-"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ou1gLDYmjOXO",
+        "outputId": "f9798a81-f4a4-4d76-ac6b-079ae4dcf406"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The Largest Palindrome made from the product of two 3-digit numbers: 906609\n"
+          ]
+        }
+      ],
+      "source": [
+        "import itertools\n",
+        "\n",
+        "numbers_with_3_digits = list(range(100, 999 + 1))\n",
+        "combinations = list(itertools.combinations(numbers_with_3_digits, 2))\n",
+        "\n",
+        "products = [list(x)[0] * list(x)[1] for x in combinations]\n",
+        "\n",
+        "palindrome_products = filter(is_palindrome_number, products)\n",
+        "largest_palindrome = max(palindrome_products)\n",
+        "\n",
+        "print(f\"The Largest Palindrome made from the product of two 3-digit numbers: {largest_palindrome}\")"
+      ]
     },
     {
       "cell_type": "markdown",
