Attempt 1 to intermediate exercise # 5 - Inefficient algorithm

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -245,7 +245,27 @@
         "id": "TJ7CkKx4jOXR"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "smallest_number = 1;\n",
+        "complies_divisible_requirement = False\n",
+        "\n",
+        "while not complies_divisible_requirement:\n",
+        "  divisors_without_remainder = []\n",
+        "  for divisor in range(1,21):\n",
+        "    if smallest_number % divisor != 0:\n",
+        "      break;\n",
+        "\n",
+        "    divisors_without_remainder.append(divisor)\n",
+        "  print(len(divisors_without_remainder))\n",
+        "  if len(divisors_without_remainder)  == 20:\n",
+        "    complies_divisible_requirement = True\n",
+        "\n",
+        "  smallest_number += 1\n",
+        "\n",
+        "print(smallest_number)\n",
+        "    \n",
+        "    \n"
+      ]
     },
     {
       "cell_type": "markdown",
