Attempt 2 to intermediate exercise # 5 - Fix Inefficient algorithm using concepts about prime factors

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -240,31 +240,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TJ7CkKx4jOXR"
-      },
-      "outputs": [],
       "source": [
-        "smallest_number = 1;\n",
-        "complies_divisible_requirement = False\n",
+        "#Return dict when key is prime factor and value its potency\n",
+        "def get_prime_factors(number):\n",
         "\n",
-        "while not complies_divisible_requirement:\n",
-        "  divisors_without_remainder = []\n",
-        "  for divisor in range(1,21):\n",
-        "    if smallest_number % divisor != 0:\n",
-        "      break;\n",
+        "  divisors_dict = dict()\n",
         "\n",
-        "    divisors_without_remainder.append(divisor)\n",
-        "  print(len(divisors_without_remainder))\n",
-        "  if len(divisors_without_remainder)  == 20:\n",
-        "    complies_divisible_requirement = True\n",
+        "  current_divisor = 2\n",
+        "  current_divident = number\n",
         "\n",
-        "  smallest_number += 1\n",
+        "  while current_divident != 1:\n",
         "\n",
-        "print(smallest_number)\n",
-        "    \n",
-        "    \n"
+        "    if current_divident % current_divisor == 0:\n",
+        "      if(divisors_dict.get(current_divisor) == None):\n",
+        "        divisors_dict[current_divisor] = 0\n",
+        "      \n",
+        "      current_divident = current_divident / current_divisor\n",
+        "      divisors_dict[current_divisor] += 1\n",
+        "    else:\n",
+        "      current_divisor += 1\n",
+        "\n",
+        "  return divisors_dict"
+      ],
+      "metadata": {
+        "id": "Dzey8ua9E9ji"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TJ7CkKx4jOXR",
+        "outputId": "7748044c-fad7-47bc-9f9d-b1f4cdb0d7ae"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Smallest Number: 232792560\n"
+          ]
+        }
+      ],
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "divisibles_numbers_to_check = list(range(1,21))\n",
+        "\n",
+        "factors_summary = dict()\n",
+        "for divisible_number in divisibles_numbers_to_check:\n",
+        "  factors = get_prime_factors(divisible_number)\n",
+        "\n",
+        "  for factor, potency in factors.items():\n",
+        "    if potency > int(factors_summary.get(factor) or 0):\n",
+        "        factors_summary[factor] = potency\n",
+        "\n",
+        "smallest_number = reduce(\n",
+        "      lambda acc, item: acc * pow(list(item)[0], list(item)[1]), \n",
+        "      factors_summary.items(), \n",
+        "      1\n",
+        "    )\n",
+        "\n",
+        "print(f\"Smallest Number: {smallest_number}\" )"
       ]
     },
     {
