Completing intermediate exercise # 6

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -326,12 +326,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "lxhL42PPjOXT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lxhL42PPjOXT",
+        "outputId": "399ff561-6682-47cf-ef57-1ea35655968c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The difference between the sum of the squares of the first 100 natural numbers and the square of the sum is 25164150\n"
+          ]
+        }
+      ],
+      "source": [
+        "from functools import reduce\n",
+        "\n",
+        "max_number = 100\n",
+        "numbers = list(range(1, max_number + 1))\n",
+        "\n",
+        "sum_of_squares = reduce(lambda x, number: x + number**2, numbers, 0)\n",
+        "square_of_sum = reduce(lambda x, number: x + number, numbers, 0)**2\n",
+        "\n",
+        "diff = square_of_sum - sum_of_squares\n",
+        "print(f\"The difference between the sum of the squares of the first {max_number} natural numbers and the square of the sum is {diff}\")"
+      ]
     },
     {
       "cell_type": "markdown",
