# Completing intermediate exercise # 7

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -26,7 +26,8 @@
       "execution_count": 24,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ZTZhVYvRjOXD",
         "outputId": "e57598c3-cb32-409c-f425-cf193efb23be"
@@ -76,7 +77,8 @@
       "execution_count": 17,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "VuJJlyl5jOXI",
         "outputId": "e875bfab-5c2f-4087-b939-70ab0a78058a"
@@ -130,7 +132,8 @@
       "execution_count": 37,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "wa2FLtHkjOXL",
         "outputId": "c2889f3f-eb54-4f9c-af90-31e5d47247c4"
@@ -199,7 +202,8 @@
       "execution_count": 17,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ou1gLDYmjOXO",
         "outputId": "f9798a81-f4a4-4d76-ac6b-079ae4dcf406"
@@ -273,7 +277,8 @@
       "execution_count": 42,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "TJ7CkKx4jOXR",
         "outputId": "7748044c-fad7-47bc-9f9d-b1f4cdb0d7ae"
@@ -329,7 +334,8 @@
       "execution_count": 48,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "lxhL42PPjOXT",
         "outputId": "399ff561-6682-47cf-ef57-1ea35655968c"
@@ -369,12 +375,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
-        "id": "XDfChKncjOXV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XDfChKncjOXV",
+        "outputId": "674c7584-130e-4717-d298-3260f1df6e34"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " the 1001st prime number: 7927\n"
+          ]
+        }
+      ],
+      "source": [
+        "import math\n",
+        "\n",
+        "def is_prime(n):\n",
+        "  if n == 2 or n == 3:\n",
+        "      return True\n",
+        "  if n < 2 or n % 2 == 0:\n",
+        "      return False\n",
+        "  \n",
+        "  # Using the integer square root for efficiency\n",
+        "  sqrt_n = math.isqrt(n)  \n",
+        "\n",
+        "  # Only evalue odd's divisor becouse even divisor if divisible to 2...\n",
+        "  # ... and alredy this posibility is controled with second if of this function\n",
+        "  for divisor in range(3, sqrt_n + 1, 2):\n",
+        "      if n % divisor == 0:\n",
+        "          return False\n",
+        "\n",
+        "  return True\n",
+        "\n",
+        "objetive_number_position = 1001 # You can change this parameter\n",
+        "number_to_evaluate = 1\n",
+        "\n",
+        "prime_numbers = []\n",
+        "while len(prime_numbers) != objetive_number_position:\n",
+        "  if is_prime(number_to_evaluate):\n",
+        "    prime_numbers.append(number_to_evaluate)\n",
+        "  \n",
+        "  number_to_evaluate += 1\n",
+        "\n",
+        "print(f\" the {objetive_number_position}st prime number: {prime_numbers[-1]}\")\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
