Completing intermediate exercise # 8

--- a/project_euler_01.ipynb
+++ b/project_euler_01.ipynb
@@ -443,12 +443,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
-        "id": "t-K-QvOWjOXW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t-K-QvOWjOXW",
+        "outputId": "e984e3c1-c063-464c-a6a5-61e18d5a127b"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Product of a: 200, b: 375, c: 425: 31875000\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Equation \n",
+        "# c = 1000 - a - b\n",
+        "\n",
+        "a,b,c = [0,0,0]\n",
+        "\n",
+        "# a can't be grater than b and c, so can't be greater than 350\n",
+        "for a_value in range(1, 333):\n",
+        "    for b_value in range(a_value + 1, 500):\n",
+        "        (a, b) = [a_value, b_value]\n",
+        "        \n",
+        "        c = 1000 - a - b\n",
+        "        if a ** 2 + b ** 2 == c ** 2:\n",
+        "            break\n",
+        "    \n",
+        "    if a ** 2 + b ** 2 == c ** 2:\n",
+        "      break\n",
+        "\n",
+        "print(f\"Product of a: {a}, b: {b}, c: {c}:\", a*b*c)\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
