Completing exercise #2 about while loops

--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -68,15 +68,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "Hycu3Y36HOwe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hycu3Y36HOwe",
+        "outputId": "bb77d6a3-36e1-4197-dcc3-1631471dc256"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "List generated: [21, 36, 12, 25, 44]\n",
+            "Sum of all numbers: 138\n"
+          ]
+        }
+      ],
+      "source": [
+        "import random\n",
+        "\n",
+        "sum_of_numbers = 0\n",
+        "numbers = []\n",
+        "\n",
+        "while sum_of_numbers <= 100:\n",
+        "  random_number = random.randint(1, 50)\n",
+        "  numbers.append(random_number)\n",
+        "  \n",
+        "  sum_of_numbers = sum(numbers)\n",
+        "\n",
+        "print(f\"List generated: {numbers}\")\n",
+        "print(f\"Sum of all numbers: {sum_of_numbers}\")"
+      ]
     },
     {
       "cell_type": "markdown",
