Completing exercise #3 about while loops

--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -21,30 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BU5YdJfsHOwZ",
-        "outputId": "b61dd154-f856-46b2-f2a4-ef5e22ea496d"
+        "id": "BU5YdJfsHOwZ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a word or number: 5\n",
-            "Enter a word or number: hello\n",
-            "Enter a word or number: bye\n",
-            "Enter a word or number: done\n",
-            "User inputs: ['5', 'hello', 'bye', 'done']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "user_inputs = []\n",
         "\n",
@@ -116,15 +100,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "M7fzTG6mHOwi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M7fzTG6mHOwi",
+        "outputId": "1ad6fd74-9f2e-42ab-c120-65de24581e5d"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a word or number: qwe\n",
+            "Enter a word or number: we\n",
+            "Enter a word or number: qwe\n",
+            "qwe already inserted\n",
+            "User inputs: ['qwe', 'we']\n"
+          ]
+        }
+      ],
+      "source": [
+        "user_inputs = []\n",
+        "\n",
+        "user_input = \"\"\n",
+        "\n",
+        "\n",
+        "string_exist = False\n",
+        "while not string_exist:\n",
+        "  user_input = input(\"Enter a word or number: \").strip()\n",
+        "  if user_input in user_inputs:\n",
+        "    print(f\"{user_input} already inserted\")\n",
+        "    string_exist = True\n",
+        "  else: \n",
+        "    user_inputs.append(user_input)\n",
+        "\n",
+        "print(f\"User inputs: {user_inputs}\")"
+      ]
     },
     {
       "cell_type": "markdown",
