Completing exercise #4 about while loops

--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -100,30 +100,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M7fzTG6mHOwi",
-        "outputId": "1ad6fd74-9f2e-42ab-c120-65de24581e5d"
+        "id": "M7fzTG6mHOwi"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter a word or number: qwe\n",
-            "Enter a word or number: we\n",
-            "Enter a word or number: qwe\n",
-            "qwe already inserted\n",
-            "User inputs: ['qwe', 'we']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "user_inputs = []\n",
         "\n",
@@ -153,15 +137,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "5fpoOvXgHOwm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5fpoOvXgHOwm",
+        "outputId": "e6971d8f-770f-4517-91e6-0fddb5d17621"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number greater than 10: 34\n",
+            "Enter a number greater than 10: 11\n",
+            "Enter a number greater than 10: 9\n",
+            "9 is not valid number\n",
+            "User inputs: ['34', '11']\n"
+          ]
+        }
+      ],
+      "source": [
+        "user_inputs = []\n",
+        "\n",
+        "user_input = \"\"\n",
+        "\n",
+        "\n",
+        "is_valid_number = False\n",
+        "while not is_valid_number:\n",
+        "  user_input = input(\"Enter a number greater than 10: \").strip()\n",
+        "  if user_input.isdigit() and int(user_input) > 10:\n",
+        "    user_inputs.append(user_input)\n",
+        "  else: \n",
+        "    print(f\"{user_input} is not valid number\")\n",
+        "    is_valid_number = True\n",
+        "\n",
+        "print(f\"User inputs: {user_inputs}\")"
+      ]
     },
     {
       "cell_type": "markdown",
