Completing exercise #5 about while loops

--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -190,15 +190,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "43bPKKeuHOwq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "43bPKKeuHOwq",
+        "outputId": "6f3db182-51f6-4daa-9576-ecf162536dd7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a word or number: 12\n",
+            "Enter a word or number: eqw\n",
+            "eqw is not a number\n",
+            "Enter a word or number: 23\n",
+            "Enter a word or number: done\n",
+            "Higest number: 23\n"
+          ]
+        }
+      ],
+      "source": [
+        "user_inputs = []\n",
+        "\n",
+        "user_input = \"\"\n",
+        "highest_number = 0\n",
+        "while user_input.lower() != \"done\":\n",
+        "  user_input = input(\"Enter a word or number: \")\n",
+        "\n",
+        "  if user_input.lower() == \"done\":\n",
+        "    continue\n",
+        "  elif not user_input.isdigit():\n",
+        "    print(f\"{user_input} is not a number\")\n",
+        "  else:\n",
+        "    if int(user_input) > highest_number:\n",
+        "      highest_number = int(user_input)\n",
+        "  \n",
+        "\n",
+        "\n",
+        "print(f\"Highest number: {highest_number}\")"
+      ]
     }
   ],
   "metadata": {
