Completing exercise #5 about while loops - Allowing decimals numbers

--- a/while_loop.ipynb
+++ b/while_loop.ipynb
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 27,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
@@ -199,37 +199,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "43bPKKeuHOwq",
-        "outputId": "6f3db182-51f6-4daa-9576-ecf162536dd7"
+        "outputId": "f3a9dbb0-ce67-41eb-f3a4-e9fc90b46177"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a word or number: 12\n",
-            "Enter a word or number: eqw\n",
-            "eqw is not a number\n",
-            "Enter a word or number: 23\n",
+            "Enter a word or number: 123.45\n",
+            "Enter a word or number: 2000\n",
             "Enter a word or number: done\n",
-            "Higest number: 23\n"
+            "Highest number: 2000.0\n"
           ]
         }
       ],
       "source": [
-        "user_inputs = []\n",
+        "import re\n",
         "\n",
         "user_input = \"\"\n",
         "highest_number = 0\n",
         "while user_input.lower() != \"done\":\n",
-        "  user_input = input(\"Enter a word or number: \")\n",
+        "  user_input = input(\"Enter a word or number: \").strip()\n",
+        "  is_numeric_input = re.match(r'^-?\\d+(\\.\\d+)?$', user_input)\n",
         "\n",
         "  if user_input.lower() == \"done\":\n",
         "    continue\n",
-        "  elif not user_input.isdigit():\n",
+        "  elif not is_numeric_input:\n",
         "    print(f\"{user_input} is not a number\")\n",
         "  else:\n",
-        "    if int(user_input) > highest_number:\n",
-        "      highest_number = int(user_input)\n",
+        "    if float(user_input) > highest_number:\n",
+        "      highest_number = float(user_input)\n",
         "  \n",
         "\n",
         "\n",
